i18n(es): update of  `astro-pages.mdx`, `markdown-content.mdx`, `rss.mdx`, `styling.mdx` & `auto.mdx` (#2425)
* updates

* missing import

* fixed links

* fixed typo

* applied suggestions

* Update src/pages/es/core-concepts/astro-pages.mdx

Co-authored-by: Kevin Zuniga Cuellar <46791833+kevinzunigacuellar@users.noreply.github.com>

--- a/src/pages/es/guides/markdown-content.mdx
+++ b/src/pages/es/guides/markdown-content.mdx
@@ -4,7 +4,7 @@ title: Markdown & MDX
 description: Aprende a crear contenido usando Markdown o MDX en Astro
 i18nReady: true
 ---
-
+import FileTree from '~/components/FileTree.astro';
 import Since from '~/components/Since.astro';
 
 El [Markdown](https://daringfireball.net/projects/markdown/) se usa comúnmente para crear contenido con mucho texto, como artículos de blog y documentación. Astro incluye soporte integrado para archivos estándar de Markdown (`.md`, `.markdown`, `.mdown`, `.mkdn`, `.mkd`, `.mdwn`).
@@ -14,6 +14,24 @@ Con la [integración @astrojs/mdx](/es/guides/integrations-guide/mdx/) instalada
 ¡Utiliza cualquiera de ambos (o ambos) para escribir tu contenido Markdown!
 
 ## Páginas de Markdown y MDX
+
+### Colecciones de contenido
+
+Puedes gestionar tus archivos Markdown y MDX en Astro en una carpeta especial `src/content/`. [Las colecciones de contenido](/es/guides/content-collections/) te ayudan a organizar tu contenido, validar tu frontmatter y proporcionar seguridad de tipo TypeScript automática mientras trabajas con tu contenido.
+
+<FileTree>
+- src/content/
+  - **newsletter/** 
+    - week-1.md
+    - week-2.md
+  - **authors/**
+    - grace-hopper.md
+    - alan-turing.md
+</FileTree>
+
+
+
+Ver más sobre el uso de [colecciones de contenido en Astro](/es/guides/content-collections/).
 
 ### Enrutamiento basado en archivos
 
@@ -131,6 +149,9 @@ const { frontmatter } = Astro.props;
 </html>
 ```
 
+Puedes también [aplicar estilos al Markdown](/es/guides/styling/#estilando-markdown) en tu componente plantilla.
+
+
 📚 Aprende más acerca de [Plantillas de Markdown](/es/core-concepts/layouts/#plantillas-de-markdownmdx).
 
 
@@ -150,7 +171,6 @@ Puedo vincular internamente a [mi conclusión](#conclusión) en la misma página
 
 Puedo usar la URL `https://mi-dominio.com/page-1/#introducción` para navegar directamente a mi Introducción en la página.
 ```
-
 
 ### Escapando caracteres especiales
 
@@ -428,7 +448,7 @@ Puedes personalizar cómo remark analiza tu Markdown en `astro.config.mjs`. Pued
 
 ### Plugins de Markdown
 
-Astro es compatible con plugins externos de [remark](https://github.com/remarkjs/remark) y [rehype](https://github.com/rehypejs/rehype) para Markdown y MDX. Estos plugins te permiten extender tu Markdown con nuevas características, como [generación automática de tabla de contenidos](https://github.com/remarkjs/remark-toc), [aplicar etiquetas accesibles a emojis](https://github.com/florianeckerstorfer/remark-a11y-emoji) y más.
+Astro es compatible con plugins externos de [remark](https://github.com/remarkjs/remark) y [rehype](https://github.com/rehypejs/rehype) para Markdown y MDX. Estos plugins te permiten extender tu Markdown con nuevas características, como [generación automática de tabla de contenidos](https://github.com/remarkjs/remark-toc), [aplicar etiquetas accesibles a emojis](https://github.com/florianeckerstorfer/remark-a11y-emoji) y [aplicar estilos al Markdown](/es/guides/styling/#estilando-markdown).
 
 ¡Te invitamos a darle un vistazo a las listas [awesome-remark](https://github.com/remarkjs/awesome-remark) y [awesome-rehype](https://github.com/rehypejs/awesome-rehype) para ver más plugins populares! Puedes leer sus README para seguir las instrucciones de instalación de cada uno.
 
