--- a/src/pages/es/core-concepts/astro-pages.mdx
+++ b/src/pages/es/core-concepts/astro-pages.mdx
@@ -22,6 +22,8 @@ Astro es compatible con los siguientes tipos de archivos en el directorio `src/p
 
 Astro aprovecha una estrategia de enrutamiento llamada **enrutamiento basado en archivos**. Cada archivo `.astro` en la carpeta `src/pages` se convierte en una página o un endpoint en tu proyecto de acuerdo a su ruta.
 
+Un archivo puede generar múltiples páginas usando [enrutamiento dinámico](/es/core-concepts/routing/#rutas-dinámicas). Esto te permite crear páginas incluso si tu contenido está fuera del directorio especial `/pages/`, como en una [colección de contenido](/es/guides/content-collections/) o un [CMS](/es/guides/cms/).
+
 📚 Lea más sobre [enrutamiento en Astro](/es/core-concepts/routing/)
 
 ### Link entre páginas
@@ -61,6 +63,8 @@ import MySiteLayout from '../layouts/MySiteLayout.astro';
 ## Páginas Markdown/MDX
 
 Astro trata archivos Markdown (`.md`) dentro de `src/pages/` como páginas en tu proyecto. Si tienes la [integración de MDX instalada](/es/guides/integrations-guide/mdx/#installation), también procesa los archivos MDX (`.mdx`) de la misma manera. Estos se usan comúnmente para páginas con mucho texto, como artículos de blog y documentación.
+
+[Las colecciones de contenido de páginas Markdown o MDX](/es/guides/content-collections/) en `src/content/` pueden ser usadas para [generar páginas dinámicamente](/es/core-concepts/routing/#rutas-dinámicas).
 
 Las plantillas de página son especialmente útiles para [archivos Markdown](#páginas-markdownmdx). Los archivos Markdown pueden usar la propiedad de frontmatter `layout` para especificar un [componente de plantilla](/es/core-concepts/layouts/) que envolverá el contenido de Markdown en un  documento de página `<html>...</html>`.
 
