--- a/src/pages/es/guides/styling.mdx
+++ b/src/pages/es/guides/styling.mdx
@@ -478,6 +478,13 @@ Vue en Astro es compatible con los mismos métodos que `vue-loader`:
 
 Svelte en Astro también funciona exactamente como se espera: [Svelte Styling Docs][svelte-style].
 
+## Estilando Markdown
+
+Cualquier método de estilo en Astro está disponible para un [componente de diseño de Markdown](/es/core-concepts/layouts/#plantillas-de-markdownmdx).
+
+Puede aplicar estilos globales a tu contenido de Markdown agregando [etiquetas `<style>`](#estilos-globales) y [hojas de estilo importadas](#estilos-externos) al la plantilla que envuelve el contenido de tu página. También puedes agregar [integraciones de CSS](#integraciones-css) incluyendo [Tailwind](/es/guides/integrations-guide/tailwind/).
+
+Si usas Tailwind, el [plugin de tipografía](https://tailwindcss.com/docs/typography-plugin) puede ser útil para estilar Markdown.
 
 ## Avanzado
 
