smaller comparison code for tabs

--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -129,7 +129,7 @@ Compare the following Next component and a corresponding Astro component:
 
 <AstroJSXTabs>
   <Fragment slot="jsx">
-    ```jsx title="Page.jsx"
+    ```jsx title="StarCount.jsx"
     import Header from "./header";
     import Footer from './footer';
     import "./layout.css";
@@ -138,21 +138,12 @@ Compare the following Next component and a corresponding Astro component:
         const res = await fetch('https://api.github.com/repos/withastro/astro')
         const json = await res.json()
         return {
-            props: {
-                message: json.message,
-                stars: json.stargazers_count || 0,
-            },
+            props: { message: json.message, stars: json.stargazers_count || 0 },
         }
     }
 
-    const Component = ({
-        stars,
-        message,
-    }) => {
-        if (message === "Not Found") return (
-            <p>The repository you're looking up doesn't exist</p>
-        )
-
+    const Component = ({ stars, message }) => {
+        
         return (
             <>
                 <Header />
@@ -171,10 +162,10 @@ Compare the following Next component and a corresponding Astro component:
     ```
   </Fragment>
   <Fragment slot="astro">
-    ```astro title="Page.astro"
+    ```astro title="StarCount.astro"
     ---
     import Header from "./header";
-    import Footer from './footer';
+    import Footer from "./footer";
     import "./layout.css";
 
     const res = await fetch('https://api.github.com/repos/withastro/astro')
@@ -182,15 +173,9 @@ Compare the following Next component and a corresponding Astro component:
     const message = json.message;
     const stars = json.stargazers_count || 0;
     ---
-
-    {message === "Not Found" ? 
-          <p>The repository you're looking up doesn't exist</p> :
-          <>
-                <Header />
-                <p class="banner">Astro has {stars} 🧑‍🚀</p>
-                <Footer />
-            </> 
-    }
+    <Header />
+    <p class="banner">Astro has {stars} 🧑‍🚀</p>
+    <Footer />
 
     <style>
       .banner {
