--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -149,9 +149,7 @@ Compare the following Gatsby component and a corresponding Astro component:
   <Fragment slot="jsx">
     ```jsx title="component.jsx"
     import * as React from "react"
-    import PropTypes from "prop-types"
     import { useStaticQuery, graphql } from "gatsby"
-
     import Header from "./header"
     import Footer from "./footer"
     import "./layout.css"
@@ -166,39 +164,14 @@ Compare the following Gatsby component and a corresponding Astro component:
           }
         }
       `)
-
-      if (message === "denied") {
-        return (
-            <p>You are not authorized to see this page.</p>
-        )
-      }
-
       return (
         <>
           <Header siteTitle={data.site.siteMetadata.title} />
-          <div style={{ 
-            margin: `0 auto`,
-            backgroundColor: `#f4f4f4`, 
-            padding: `1em 1.5em`
-            }}>{message}</div>  
-          <div
-            style={{
-              margin: `0 auto`,
-              maxWidth: 960,
-              padding: `1.25rem`,
-            }}
-          >
-            <main>{children}</main>
-            </div>
-          
+          <div style={{ margin: `0`, maxWidth: `960`}}>{message}</div>
+          <main>{children}</main>
           <Footer siteTitle={data.site.siteMetadata} />
-
         </>
       )
-    }
-
-    Component.propTypes = {
-      children: PropTypes.node.isRequired,
     }
 
     export default Component
@@ -214,26 +187,12 @@ Compare the following Gatsby component and a corresponding Astro component:
     import { site } from "../data/siteMetaData.js"
     const { message } = Astro.props
     ---
-    {message === "denied"
-      ? <p>You are not authorized to see this page.</p>
-
-      : <Header siteTitle={site.title} />
-        <div class="banner">{message}</div>  
-        <div style="margin: 0 auto; max-width: 960; padding: 1.25rem;">
-          <main>
-            <slot />
-          </main>
-        </div>
-        <Footer siteTitle={site.title} />
-    }
-
-    <style>
-      .banner { 
-        margin: 0 auto;
-        background-color: #f4f4f4; 
-        padding: 1em 1.5em;
-      }  
-    </style>
+    <Header siteTitle={site.title} />
+      <div style="margin: 0; max-width: 960;">{message}</div>
+      <main>
+        <slot />
+      </main>
+    <Footer siteTitle={site.title} />
     ```
   </Fragment>
 </AstroJSXTabs>
