Apply suggestions from Yan code review
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -62,7 +62,7 @@ Astro 2.0 drops Node 14 support entirely, so that all Astro users can take advan
 
  Check that both your development environment and your deployment environment are using **Node.js `16.12.0` or later**.
 
-1. Check your local version of node using:
+1. Check your local version of Node using:
 
     ```sh
     node -v
@@ -106,7 +106,7 @@ export default defineConfig({
 
 ### Changed: `_astro/` folder for build assets
 
-In 1.x, assets were built to various locations, including `assets/`, `chunks/` and the root of the build output.
+In 1.x, assets were built to various locations, including `assets/`, `chunks/`, and to the root of the build output.
 
 Astro 2.0 moves and unifies the location of all build output assets to a new `_astro/` folder. 
 
@@ -153,7 +153,7 @@ export default defineConfig({
 
 In 1.x, you could choose to disable both of Astro's default Markdown plugins (GitHub-Flavored Markdown and SmartyPants) by setting `markdown.extendDefaultPlugins: false`.
 
-Astro 2.0 replaces `markdown.extendDefaultPlugins: false` with separate Boolean options to control each of Astro's built-in default Markdown plugins individually. These are enabled by default, and can be set to `false` independently.
+Astro 2.0 replaces `markdown.extendDefaultPlugins: false` with separate Boolean options to individually control each of Astro's built-in default Markdown plugins. These are enabled by default and can be set to `false` independently.
 
 ##### What should I do?
 
@@ -189,7 +189,7 @@ Astro 2.0 replaces the behavior controlled by `mdx.extendPlugins` with three new
 
 ##### What should I do?
 
-Delete `extendPlugins: 'markdown'` in your configuration. This is now default behavior. 
+Delete `extendPlugins: 'markdown'` in your configuration. This is now the default behavior.
 
 ```js del={8}
 // astro.config.mjs
@@ -333,7 +333,7 @@ import imageUrl from './image.png';
 
 ### Removed: `Astro.fetchContent()`
 
-In 0.26, Astro deprecated `Astro.fetchContent()`for fetching data from your local Markdown files.
+In 0.26, Astro deprecated `Astro.fetchContent()` for fetching data from your local Markdown files.
 
 Astro 2.0 removes this option entirely. `Astro.fetchContent()` in your code will cause an error.
 
