updates info in v1 legacy guide

--- a/src/pages/en/guides/upgrade-to/v1.mdx
+++ b/src/pages/en/guides/upgrade-to/v1.mdx
@@ -1,14 +1,14 @@
 ---
 layout: ~/layouts/MainLayout.astro
-title: Migration Guide
-description: How to migrate your project to latest version of Astro.
+title: Legacy v0.x Upgrade Guide 
+description: Archived guide documenting changes between pre-v1 versions of Astro
 i18nReady: false
 ---
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
 
-This guide will help you migrate from older versions of Astro to the latest version.
+This guide will help you upgrade through breaking changes in pre-v1 versions of Astro.
 
 You can update your project's version of Astro to the latest version using your package manager. If you're using Astro integrations, you'll also want to update those to the latest version.
 <PackageManagerTabs>
