consistend always v for version numbers

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -46,7 +46,7 @@ Update your project's version of Astro to the latest version using your package 
   </Fragment>
 </PackageManagerTabs>
 
-## Astro 2.0 Breaking Changes
+## Astro v2.0 Breaking Changes
 
 Astro v2.0 includes some breaking changes, as well as the removal of some previously deprecated features. If your project doesn't work as expected after upgrading to v2.0, check this guide for an overview of all breaking changes and instructions on how to update your codebase.
 
@@ -56,7 +56,7 @@ See [the changelog](https://github.com/withastro/astro/blob/main/packages/astro/
 
 Node 14 is scheduled to reach its End of Life in April 2023. 
 
-Astro 2.0 drops Node 14 support entirely, so that all Astro users can take advantage of Node's more modern features.
+Astro v2.0 drops Node 14 support entirely, so that all Astro users can take advantage of Node's more modern features.
 
 #### What should I do?
 
@@ -78,7 +78,7 @@ Astro 2.0 drops Node 14 support entirely, so that all Astro users can take advan
 
 ### Reserved: `src/content/`
 
-Astro 2.0 now includes the Collections API for organizing your Markdown and MDX files into [content collections](/en/guides/content-collections/). This API reserves `src/content/` as a special folder.
+Astro v2.0 now includes the Collections API for organizing your Markdown and MDX files into [content collections](/en/guides/content-collections/). This API reserves `src/content/` as a special folder.
 
 #### What should I do?
 
@@ -86,9 +86,9 @@ Rename an existing `src/content/` folder to avoid conflicts. This folder, if it 
 
 ### Changed: `Astro.site` trailing slash
 
-In 1.x, Astro ensured the URL you set as `site` in `astro.config.mjs` always had a trailing slash when accessed using `Astro.site`.
+In v1.x, Astro ensured the URL you set as `site` in `astro.config.mjs` always had a trailing slash when accessed using `Astro.site`.
 
-Astro 2.0 no longer modifies the value of `site`. `Astro.site` will use the exact value defined, and a trailing slash must be specified if desired.
+Astro v2.0 no longer modifies the value of `site`. `Astro.site` will use the exact value defined, and a trailing slash must be specified if desired.
 
 #### What should I do?
 
@@ -106,9 +106,9 @@ export default defineConfig({
 
 ### Changed: `_astro/` folder for build assets
 
-In 1.x, assets were built to various locations, including `assets/`, `chunks/`, and to the root of the build output.
+In v1.x, assets were built to various locations, including `assets/`, `chunks/`, and to the root of the build output.
 
-Astro 2.0 moves and unifies the location of all build output assets to a new `_astro/` folder. 
+Astro v2.0 moves and unifies the location of all build output assets to a new `_astro/` folder. 
 
 <FileTree>
 - dist/
@@ -127,16 +127,16 @@ Update your deployment platform configuration if it relies on the location of th
 
 #### Removed: `extendDefaultPlugins`
 
-In 1.x, Astro used `markdown.extendDefaultPlugins` to re-enable Astro's default plugins when adding your own Markdown plugins.
+In v1.x, Astro used `markdown.extendDefaultPlugins` to re-enable Astro's default plugins when adding your own Markdown plugins.
 
-Astro 2.0 removes this configuration option entirely because its behavior is now the default.
+Astro v2.0 removes this configuration option entirely because its behavior is now the default.
 
 Applying remark and rehype plugins in your Markdown configuration  **no longer disables Astro's default plugins**. GitHub-Flavored Markdown and Smartypants are now applied whether or not custom `remarkPlugins` or `rehypePlugins` are configured.
 
 
 ##### What should I do?
 
-Remove `extendDefaultPlugins` in your configuration. This is now Astro's default behavior in 2.0, and you can delete this line without any replacement.
+Remove `extendDefaultPlugins` in your configuration. This is now Astro's default behavior in v2.0, and you can delete this line without any replacement.
 
 ```js del={6}
 // astro.config.mjs
@@ -151,9 +151,9 @@ export default defineConfig({
 
 #### Added: `gfm` and `smartypants`
 
-In 1.x, you could choose to disable both of Astro's default Markdown plugins (GitHub-Flavored Markdown and SmartyPants) by setting `markdown.extendDefaultPlugins: false`.
+In v1.x, you could choose to disable both of Astro's default Markdown plugins (GitHub-Flavored Markdown and SmartyPants) by setting `markdown.extendDefaultPlugins: false`.
 
-Astro 2.0 replaces `markdown.extendDefaultPlugins: false` with separate Boolean options to individually control each of Astro's built-in default Markdown plugins. These are enabled by default and can be set to `false` independently.
+Astro v2.0 replaces `markdown.extendDefaultPlugins: false` with separate Boolean options to individually control each of Astro's built-in default Markdown plugins. These are enabled by default and can be set to `false` independently.
 
 ##### What should I do?
 
@@ -179,9 +179,9 @@ export default defineConfig({
 
 #### Replaced: `extendPlugins` changed to `extendMarkdownConfig`
 
-In 1.x, the MDX integration’s `extendPlugins` option managed how your MDX files should inherit your Markdown configuration: all your Markdown configuration (`markdown`), or Astro's default plugins only (`default`).
+In v1.x, the MDX integration’s `extendPlugins` option managed how your MDX files should inherit your Markdown configuration: all your Markdown configuration (`markdown`), or Astro's default plugins only (`default`).
 
-Astro 2.0 replaces the behavior controlled by `mdx.extendPlugins` with three new, independently-configurable options that are `true` by default:
+Astro v2.0 replaces the behavior controlled by `mdx.extendPlugins` with three new, independently-configurable options that are `true` by default:
 
 - **[`mdx.extendMarkdownConfig`](/en/guides/integrations-guide/mdx/#extendmarkdownconfig)** to inherit all or none of your Markdown configuration
 - **`mdx.gfm`** to enable or disable GitHub-Flavored Markdown in MDX
@@ -226,7 +226,7 @@ export default defineConfig({
 
 #### Added: More MDX config options to match Markdown
 
-Astro 2.0 allows you to now individually set [every available Markdown configuration option](/en/reference/configuration-reference/#markdown-options) (except `drafts`) separately in your MDX integration configuration.
+Astro v2.0 allows you to now individually set [every available Markdown configuration option](/en/reference/configuration-reference/#markdown-options) (except `drafts`) separately in your MDX integration configuration.
 
 ```js
 // astro.config.mjs
@@ -254,9 +254,9 @@ Revisit your Markdown and MDX configuration and compare your existing config wit
 
 ### Changed: Plugin access to frontmatter
 
-In 1.x, remark and rehype plugins did not have access to user frontmatter. Astro merged plugin frontmatter with your file's frontmatter, without passing the file frontmatter to your plugins.
+In v1.x, remark and rehype plugins did not have access to user frontmatter. Astro merged plugin frontmatter with your file's frontmatter, without passing the file frontmatter to your plugins.
 
-Astro 2.0 gives remark and rehype plugins access to user frontmatter via frontmatter injection. This allows plugin authors to modify a user's existing frontmatter, or compute new properties based on other properties.
+Astro v2.0 gives remark and rehype plugins access to user frontmatter via frontmatter injection. This allows plugin authors to modify a user's existing frontmatter, or compute new properties based on other properties.
 
 
 #### What should I do?
@@ -265,9 +265,9 @@ Check any remark and rehype plugins you have written to see whether their behavi
 
 ### Changed: RSS Configuration
 
-In 1.x, Astro's RSS package allowed you to use `items: import.meta.glob(...)` to generate a list of RSS feed items. This usage is now deprecated and will eventually be removed.
+In v1.x, Astro's RSS package allowed you to use `items: import.meta.glob(...)` to generate a list of RSS feed items. This usage is now deprecated and will eventually be removed.
 
-Astro 2.0 introduces a `pagesGlobToRssItems()` wrapper to the `items` property.
+Astro v2.0 introduces a `pagesGlobToRssItems()` wrapper to the `items` property.
 
 
 #### What should I do?
@@ -291,9 +291,9 @@ export function get(context) {
 
 ### Removed: `legacy.astroFlavoredMarkdown`
 
-In 1.0, Astro moved the old Astro-Flavored Markdown (also known as Components in Markdown) to a legacy feature.
+In v1.0, Astro moved the old Astro-Flavored Markdown (also known as Components in Markdown) to a legacy feature.
 
-Astro 2.0 removes the `legacy.astroFlavoredMarkdown` option completely. Importing and using components in `.md` files will no longer work.
+Astro v2.0 removes the `legacy.astroFlavoredMarkdown` option completely. Importing and using components in `.md` files will no longer work.
 
 #### What should I do?
 
@@ -309,13 +309,13 @@ export default defineConfig({
 
 ```
 
-If you were using this feature in 1.x, we recommend [using the MDX integration](/en/guides/integrations-guide/mdx/) which allows you to combine components and JSX expressions with Markdown syntax.
+If you were using this feature in v1.x, we recommend [using the MDX integration](/en/guides/integrations-guide/mdx/) which allows you to combine components and JSX expressions with Markdown syntax.
 
 ### Removed: `Astro.resolve()`
 
-In 0.24, Astro deprecated `Astro.resolve()` for getting resolved URLs to assets that you might want to reference in the browser.
+In v0.24, Astro deprecated `Astro.resolve()` for getting resolved URLs to assets that you might want to reference in the browser.
 
-Astro 2.0 removes this option entirely. `Astro.resolve()` in your code will cause an error.
+Astro v2.0 removes this option entirely. `Astro.resolve()` in your code will cause an error.
 
 #### What should I do?
 
@@ -333,9 +333,9 @@ import imageUrl from './image.png';
 
 ### Removed: `Astro.fetchContent()`
 
-In 0.26, Astro deprecated `Astro.fetchContent()` for fetching data from your local Markdown files.
+In v0.26, Astro deprecated `Astro.fetchContent()` for fetching data from your local Markdown files.
 
-Astro 2.0 removes this option entirely. `Astro.fetchContent()` in your code will cause an error.
+Astro v2.0 removes this option entirely. `Astro.fetchContent()` in your code will cause an error.
 
 #### What should I do?
 
@@ -350,10 +350,10 @@ let allPosts = await Astro.glob('./posts/*.md');
 
 ### Removed: `Astro.canonicalURL`
 
-In 1.0, Astro deprecated `Astro.canonicalURL` for constructing a canonical URL. 
+In v1.0, Astro deprecated `Astro.canonicalURL` for constructing a canonical URL. 
 
 
-Astro 2.0 removes this option entirely. `Astro.canonicalURL` in your code will cause an error.
+Astro v2.0 removes this option entirely. `Astro.canonicalURL` in your code will cause an error.
 
 #### What should I do?
 
@@ -377,7 +377,7 @@ There should be no changes to your code necessary! We've handled most of the upg
 
 Refer to the official [Vite Migration Guide](https://vitejs.dev/guide/migration.html) if you run into trouble.
 
-## Astro 2.0 Experimental Flags Removed
+## Astro v2.0 Experimental Flags Removed
 
 Remove the following experimental flags from `astro.config.mjs`:
 
