--- a/src/pages/en/getting-started.mdx
+++ b/src/pages/en/getting-started.mdx
@@ -8,7 +8,10 @@ import Button from '../../components/Button.astro'
 import ContributorList from '../../components/ContributorList.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-
+:::tip[Astro version 2 is here!]
+**What’s new in Astro v2?** [Find out in the announcement blog post](https://astro.build/blog/astro-2/).  
+**Ready to upgrade?** [Follow our upgrade guide](/en/guides/upgrade-to/v2/).
+:::
 
 <h2>What is Astro?</h2>
 
