--- a/src/pages/pt-br/core-concepts/astro-pages.mdx
+++ b/src/pages/pt-br/core-concepts/astro-pages.mdx
@@ -20,7 +20,7 @@ Astro suporta os seguintes tipos de arquivo no diretório `src/pages/`:
 
 Astro se beneficia de uma estratégia de roteamento chamada **roteamento baseado em arquivos**. Cada arquivo em seu diretório `src/pages` se torna um endpoint no seu site com base no seu caminho de arquivo.
 
-Um único arquivo também pode gerar múltiplas páginas utilizando [roteamento dinâmico](/pt-br/core-concepts/routing/#rotas-dinâmicas). Isso te permite criar páginas mesmo que seu conteúdo esteja fora do diretório especial `/pages/`, como em uma [coleção de conteúdo](/pt-br/guides/content-collections/#rendering-entry-content) ou em um [CMS](/pt-br/guides/cms/).
+Um único arquivo também pode gerar múltiplas páginas utilizando [roteamento dinâmico](/pt-br/core-concepts/routing/#rotas-dinâmicas). Isso te permite criar páginas mesmo que seu conteúdo esteja fora do diretório especial `/pages/`, como em uma [coleção de conteúdo](/pt-br/guides/content-collections/) ou em um [CMS](/pt-br/guides/cms/).
 
 📚 Leia mais sobre [Roteamento no Astro](/pt-br/core-concepts/routing/).
 
