--- a/src/pages/pt-br/reference/api-reference.mdx
+++ b/src/pages/pt-br/reference/api-reference.mdx
@@ -711,9 +711,6 @@ const blog = defineCollection({
     titulo: z.string(),
     permalink: z.string().optional(),
   },
-  slug({ id, data, defaultSlug, body }) {
-    return data.permalink ?? defaultSlug;
-  }
 });
 // Exponha sua coleção definida ao Astro
 // com a exportação `collections`
@@ -728,11 +725,7 @@ Essa função aceita as seguintes propriedades:
 
 `schema` é um objeto opcional para configurar o tipo e formato do frontmatter do documento para uma coleção. Cada valor do objeto deve utilizar um [validador do Zod](https://github.com/colinhacks/zod).
 
-#### `slug()`
-
-**Tipo:** `(entry: { defaultSlug: string } & Omit<CollectionEntry, 'slug'>) => string | undefined`
-
-`slug()` é uma função opcional que sobreescreve a slug padrão da entrada gerada pelo Astro. Essa função recebe `defaultSlug`, `id` da entrada, `body` do documento sem parse, e `data` com parse pelo seu schema configurado, se houver.
+[Veja o guia de `Coleções de Conteúdo`](/pt-br/guides/content-collections/#defining-a-collection-schema) para exemplos de uso.
 
 ### `getCollection()`
 
