--- a/src/pages/es/reference/errors/no-matching-renderer.mdx
+++ b/src/pages/es/reference/errors/no-matching-renderer.mdx
@@ -16,10 +16,10 @@ githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/
 
 Ninguna de las integraciones instaladas pudo renderizar el componente que importó. Asegúrate de instalar la integración adecuada para el tipo de componente que intenta incluir en su página.
 
-Para archivos JSX/TSX, [@astrojs/react](/es/guides/integrations-guide/react/), [@astrojs/preact](/en/guides/integrations-guide/preact/) o [@astrojs/ solid-js](/es/guides/integrations-guide/solid-js/). Para archivos Vue y Svelte, se pueden usar las integraciones [@astrojs/vue](/es/guides/integrations-guide/vue/) y [@astrojs/svelte](/es/guides/integrations-guide/svelte/) respectivamente
+Para archivos JSX/TSX, [@astrojs/react](/es/guides/integrations-guide/react/), [@astrojs/preact](/es/guides/integrations-guide/preact/) o [@astrojs/ solid-js](/es/guides/integrations-guide/solid-js/). Para archivos Vue y Svelte, se pueden usar las integraciones [@astrojs/vue](/es/guides/integrations-guide/vue/) y [@astrojs/svelte](/es/guides/integrations-guide/svelte/) respectivamente
 
 **Ver también:**
 
 -  [Componentes de framework](/es/core-concepts/framework-components/)
--  [Frameworks officiales](/es/guides/integrations-guide/#official-integrations)
+-  [Frameworks officiales](/es/guides/integrations-guide/#integraciones-oficiales)
 
