--- a/src/pages/es/guides/migrate-to-astro.mdx
+++ b/src/pages/es/guides/migrate-to-astro.mdx
@@ -28,7 +28,7 @@ Dependiendo de tu proyecto, es posible que puedas reusar el existente:
 
 - [Archivos Markdown/MDX](/es/guides/markdown-content/), configurado usando tus [plugins de remark y rehype](/es/guides/markdown-content/#configuración-de-markdown-y-mdx).
 
-- [Contenido de una CMS](/en/guides/cms/) a través de una integración o API.
+- [Contenido de una CMS](/es/guides/cms/) a través de una integración o API.
 
 ## ¿Qué proyectos puedo convertir a Astro?
 
