--- a/src/pages/en/reference/error-reference.mdx
+++ b/src/pages/en/reference/error-reference.mdx
@@ -45,7 +45,6 @@ The following reference is a complete list of the errors you may encounter while
 ## Markdown Errors
 
 - [**MarkdownFrontmatterParseError**](/en/reference/errors/markdown-frontmatter-parse-error/) (E06001)<br/>Failed to parse Markdown frontmatter.
-- [**MarkdownContentSchemaValidationError**](/en/reference/errors/markdown-content-schema-validation-error/) (E06002)<br/>Content collection frontmatter invalid.
 - [**InvalidFrontmatterInjectionError**](/en/reference/errors/invalid-frontmatter-injection-error/) (E06003)<br/>Invalid frontmatter injection.
 - [**MdxIntegrationMissingError**](/en/reference/errors/mdx-integration-missing-error/) (E06004)<br/>MDX integration missing.
 - [**ConfigNotFound**](/en/reference/errors/config-not-found/) (E07001)<br/>Specified configuration file not found.
@@ -53,3 +52,8 @@ The following reference is a complete list of the errors you may encounter while
 ## CLI Errors
 
 - [**GenerateContentTypesError**](/en/reference/errors/generate-content-types-error/) (E08001)<br/>Failed to generate content types.
+## Content Collection Errors
+
+- [**InvalidContentEntryFrontmatterError**](/en/reference/errors/invalid-content-entry-frontmatter-error/) (E09001)<br/>Content entry frontmatter does not match schema.
+- [**InvalidContentEntrySlugError**](/en/reference/errors/invalid-content-entry-slug-error/) (E09002)<br/>Invalid content entry slug.
+- [**ContentSchemaContainsSlugError**](/en/reference/errors/content-schema-contains-slug-error/) (E09003)<br/>Content Schema should not contain `slug`.
