--- a/src/pages/en/tutorial/2-pages/3.mdx
+++ b/src/pages/en/tutorial/2-pages/3.mdx
@@ -229,10 +229,10 @@ Given the following `.astro` script:
 
 ```astro title="src/pages/about.astro"
 ---
-operatingSystem = "Linux";
-quantity = 3;
-footwear = "boots";
-student = false;
+const operatingSystem = "Linux";
+const quantity = 3;
+const footwear = "boots";
+const student = false;
 ---
 ```
 
