Update `error-reference.mdx` to most recent changes

--- a/src/pages/pt-br/reference/error-reference.mdx
+++ b/src/pages/pt-br/reference/error-reference.mdx
@@ -38,7 +38,6 @@ A referência a seguir é uma lista completa dos erros que você pode encontrar 
 ## Erros de Markdown
 
 - [**MarkdownFrontmatterParseError**](/pt-br/reference/errors/markdown-frontmatter-parse-error/) (E06001)<br/>Failed to parse Markdown frontmatter.
-- [**MarkdownContentSchemaValidationError**](/pt-br/reference/errors/markdown-content-schema-validation-error/) (E06002)<br/>Content collection frontmatter invalid.
 - [**InvalidFrontmatterInjectionError**](/pt-br/reference/errors/invalid-frontmatter-injection-error/) (E06003)<br/>Invalid frontmatter injection.
 - [**MdxIntegrationMissingError**](/pt-br/reference/errors/mdx-integration-missing-error/) (E06004)<br/>MDX integration missing.
 - [**ConfigNotFound**](/pt-br/reference/errors/config-not-found/) (E07001)<br/>Specified configuration file not found.
@@ -47,3 +46,9 @@ A referência a seguir é uma lista completa dos erros que você pode encontrar 
 ## Erros da CLI
 
 - [**GenerateContentTypesError**](/pt-br/reference/errors/generate-content-types-error/) (E08001)<br/>Failed to generate content types.
+
+## Erros de Coleções de Conteúdo
+
+- [**InvalidContentEntryFrontmatterError**](/pt-br/reference/errors/invalid-content-entry-frontmatter-error/) (E09001)<br/>Content entry frontmatter does not match schema.
+- [**InvalidContentEntrySlugError**](/pt-br/reference/errors/invalid-content-entry-slug-error/) (E09002)<br/>Invalid content entry slug.
+- [**ContentSchemaContainsSlugError**](/pt-br/reference/errors/content-schema-contains-slug-error/) (E09003)<br/>Content Schema should not contain `slug`.
