[tutorial] tiny typo tweak

--- a/src/pages/en/tutorial/2-pages/3.mdx
+++ b/src/pages/en/tutorial/2-pages/3.mdx
@@ -53,7 +53,7 @@ Open `about.astro` which should look like this:
 </html>
 ```
 
-1. Add the following line of JavaScript in the frontmattter script, between the **code fences**:
+1. Add the following line of JavaScript in the frontmatter script, between the **code fences**:
 
     ```astro title="src/pages/about.astro" ins={2}
     ---
