--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -1,6 +1,6 @@
 ---
 layout: ~/layouts/MainLayout.astro
-title: Upgrade Guide
+title: Upgrade to Astro v2
 description: How to upgrade your project to the latest version of Astro.
 i18nReady: false
 ---
