Add note about Svelte IDE support

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -289,6 +289,25 @@ export function get(context) {
 }
 ```
 
+### Changed: Svelte IDE support
+
+Astro 2.0 requires a `svelte.config.js` file in your project if you are using [the `@astrojs/svelte` integration](/en/guides/integrations-guide/svelte/). This is needed to provide IDE autocompletion.
+
+#### What should I do?
+
+Add a `svelte.config.js` file to the root of your project:
+
+```js
+// svelte.config.js
+import { vitePreprocess } from '@astrojs/svelte';
+
+export default {
+  preprocess: vitePreprocess(),
+};
+```
+
+For new users, this file will be added automatically when running `astro add svelte`.
+
 ### Removed: `legacy.astroFlavoredMarkdown`
 
 In v1.0, Astro moved the old Astro-Flavored Markdown (also known as Components in Markdown) to a legacy feature.
