--- a/src/pages/de/getting-started.mdx
+++ b/src/pages/de/getting-started.mdx
@@ -10,7 +10,7 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 :::tip[Astro Version 2 ist da!]
 **Was gibt es neues in Astro v2?** [Erfahre es im Ankündigungs-Blogpost](https://astro.build/blog/astro-2/).  
-**Bereit fürs upgrade?** [Folge unserer Upgrade-Anleitung](/en/guides/upgrade-to/v2/).
+**Bereit fürs Upgrade?** [Folge unserer Upgrade-Anleitung](/en/guides/upgrade-to/v2/).
 :::
 
 #### Was ist Astro?
