--- a/src/pages/de/getting-started.mdx
+++ b/src/pages/de/getting-started.mdx
@@ -8,6 +8,10 @@ import ContributorList from '../../components/ContributorList.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
+:::tip[Astro Version 2 ist da!]
+**Was gibt es Neues in Astro v2?** [Erfahre es im Ankündigungs-Blogpost](https://astro.build/blog/astro-2/).  
+**Bereit fürs Upgrade?** [Folge unserer Upgrade-Anleitung](/de/guides/upgrade-to/v2/).
+:::
 
 #### Was ist Astro?
 
