docs(svelte): Add Since tag to Intellisense for TypeScript
Prior v2, vitePreprocess was imported from @sveltejs/vite-plugin-svelte.

See https://github.com/withastro/docs/pull/2431 for more information

--- a/src/pages/en/guides/integrations-guide/svelte.mdx
+++ b/src/pages/en/guides/integrations-guide/svelte.mdx
@@ -16,6 +16,7 @@ category: renderer
 i18nReady: false
 ---
 
+import Since from '~/components/Since.astro';
 import Video from '~/components/Video.astro';
 import DontEditWarning from '../../../../components/DontEditWarning.astro';
 
@@ -135,6 +136,10 @@ export default {
 ```
 
 ## Intellisense for TypeScript
+
+<p>
+  <Since v="2.0.0" />
+</p>
 
 If you're using a preprocessor like TypeScript or SCSS in your Svelte files, you can create a `svelte.config.js` file so that the Svelte IDE extension can correctly parse the Svelte files.
 
