add: Vue's reactivity API to alternatives list

--- a/src/pages/en/core-concepts/sharing-state.mdx
+++ b/src/pages/en/core-concepts/sharing-state.mdx
@@ -23,6 +23,7 @@ The [Nano Stores](https://github.com/nanostores/nanostores) library allows you t
 Still, there are a number of alternatives you can explore. These include:
 - [Svelte's built-in stores](https://svelte.dev/tutorial/writable-stores)
 - [Solid signals](https://www.solidjs.com/docs/latest) outside of a component context
+- [Vue's reactivity API](https://vuejs.org/guide/scaling-up/state-management.html#simple-state-management-with-reactivity-api)
 - [Sending custom browser events](https://developer.mozilla.org/en-US/docs/Web/Events/Creating_and_triggering_events) between components
 
 :::note[FAQ]
