--- a/src/pages/en/guides/integrations-guide/svelte.mdx
+++ b/src/pages/en/guides/integrations-guide/svelte.mdx
@@ -16,7 +16,6 @@ category: renderer
 i18nReady: false
 ---
 
-import Since from '~/components/Since.astro';
 import Video from '~/components/Video.astro';
 import DontEditWarning from '../../../../components/DontEditWarning.astro';
 
@@ -137,9 +136,7 @@ export default {
 
 ## Intellisense for TypeScript
 
-<p>
-  <Since v="2.0.0" />
-</p>
+**Added in:** `@astrojs/svelte@2.0.0`
 
 If you're using a preprocessor like TypeScript or SCSS in your Svelte files, you can create a `svelte.config.js` file so that the Svelte IDE extension can correctly parse the Svelte files.
 
