--- a/src/pages/en/guides/testing.mdx
+++ b/src/pages/en/guides/testing.mdx
@@ -2,7 +2,7 @@
 layout: ~/layouts/MainLayout.astro
 title: Testing
 description: An intro to testing in Astro
-i18nReady: false
+i18nReady: true
 ---
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
