--- a/src/pages/en/guides/cms/contentful.mdx
+++ b/src/pages/en/guides/cms/contentful.mdx
@@ -237,7 +237,7 @@ export const contentfulClient = contentful.createClient({
 
 ```
 
-Next, go to the Astro page where you will fetch data from Contentful. We wil use the home page `index.astro` in `src/pages/` in this example.
+Next, go to the Astro page where you will fetch data from Contentful. We will use the home page `index.astro` in `src/pages/` in this example.
 
 Import `BlogPost` interface and `contentfulClient` from `src/lib/contentful.ts`. 
 
