--- a/src/pages/en/guides/deploy/cleavr.mdx
+++ b/src/pages/en/guides/deploy/cleavr.mdx
@@ -41,7 +41,7 @@ To get started, you will need:
    
 2. Select the **VC Profile**, **Repo**, and **Branch** for your Astro Project.
    
-3. Make any additional configurations neccesary for your project.
+3. Make any additional configurations necessary for your project.
    
 4. Click on the **Deployments** tab and then click on **Deploy**.
 
