--- a/src/pages/en/guides/upgrade-to/v1.mdx
+++ b/src/pages/en/guides/upgrade-to/v1.mdx
@@ -399,7 +399,7 @@ When a CSS file is imported using this method, any `@import` statements are also
 
 You can reference any file inside of the `public/` directory by absolute URL path in your component template. This is a good option if you want to control the `<link>` tag on the page yourself. However, this approach also skips the CSS processing, bundling and optimizations that are provided by Astro when you use the `import` method described above.
 
-We recommend using the `import` approach over the abolute URL approach since it provides the best possible CSS performance and features by default.
+We recommend using the `import` approach over the absolute URL approach since it provides the best possible CSS performance and features by default.
 
 #### How to Resolve JavaScript Files
 
