--- a/src/pages/en/reference/api-reference.mdx
+++ b/src/pages/en/reference/api-reference.mdx
@@ -322,7 +322,7 @@ You can check whether content for a specific slot name exists with `Astro.slots.
 
 **Type:** `(slotName: string, args?: any[]) => Promise<string>`
 
-You can asychronously render the contents of a slot to a string of HTML using `Astro.slots.render()`.
+You can asynchronously render the contents of a slot to a string of HTML using `Astro.slots.render()`.
 
 ```astro
 ---
