--- a/src/pages/en/reference/integrations-reference.mdx
+++ b/src/pages/en/reference/integrations-reference.mdx
@@ -55,7 +55,7 @@ interface AstroIntegration {
 
 **When:** On initialization, before either the [Vite](https://vitejs.dev/config/) or [Astro config](/en/reference/configuration-reference/) have resolved.
 
-**Why:** To extend the project config. This inludes updating the [Astro config](/en/reference/configuration-reference/), applying [Vite plugins](https://vitejs.dev/guide/api-plugin.html), adding component renderers, and injecting scripts onto the page.
+**Why:** To extend the project config. This includes updating the [Astro config](/en/reference/configuration-reference/), applying [Vite plugins](https://vitejs.dev/guide/api-plugin.html), adding component renderers, and injecting scripts onto the page.
 
 ```ts
 'astro:config:setup'?: (options: {
