--- a/src/pages/en/reference/publish-to-npm.mdx
+++ b/src/pages/en/reference/publish-to-npm.mdx
@@ -40,7 +40,7 @@ Before diving in, it will help to have a basic understanding of:
 :::
 
 
-To create a new package we strongly recommend configuring your development enviroment to use **workspaces** within your project. This will allow you to develop your component alongside a working copy of Astro.
+To create a new package we strongly recommend configuring your development environment to use **workspaces** within your project. This will allow you to develop your component alongside a working copy of Astro.
 
 <FileTree>
 - my-new-component-directory/
