--- a/src/pages/en/tutorial/2-pages/3.mdx
+++ b/src/pages/en/tutorial/2-pages/3.mdx
@@ -157,7 +157,7 @@ Open `about.astro` which should look like this:
 2. In addition to HTML, Astro syntax allows you to include:
 
     <MultipleChoice>
-        <Option isCorrect>JavaScript logical operators, expresssions and functions</Option>
+        <Option isCorrect>JavaScript logical operators, expressions and functions</Option>
         <Option>YAML</Option>
         <Option>Markdown</Option>
     </MultipleChoice>
