--- a/src/pages/en/tutorial/5-astro-api/2.mdx
+++ b/src/pages/en/tutorial/5-astro-api/2.mdx
@@ -198,7 +198,7 @@ You now have an array `uniqueTags` with element items `"astro"`, `"successes"`, 
 ```js title="src/pages/tags/[tag].astro" del={1-8} ins={10-16}
   return [
         {params: {tag: "astro"}, props: {posts: allPosts}},
-        {params: {tag: "sucesses"}, props: {posts: allPosts}},
+        {params: {tag: "successes"}, props: {posts: allPosts}},
         {params: {tag: "community"}, props: {posts: allPosts}},
         {params: {tag: "blogging"}, props: {posts: allPosts}},
         {params: {tag: "setbacks"}, props: {posts: allPosts}},
